fail_crate/tests/unknown_struct_main_option.rs
use inew::New;

#[derive(New)]
#[new(what)]
struct A;

fn main() {}
